--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     </h1>
     A floral, solar and voluptuous interpretation composed by Olivier Polge,
     Perfumer-Creator for the House of CHANEL.
+
+    <p>$149.99</p>
+    <p>$169.99</p>
+    <p>Add to Cart</p>
   </div>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
