--- a/index.html
+++ b/index.html
@@ -7,21 +7,23 @@
   <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-
+  <link rel="stylesheet" href="./style.css">
   <title>Frontend Mentor | Product preview card component</title>
 
   <div class="container">
     <img src="./images/image-product-desktop.jpg" alt="">
-    <p>Preview</p>
-    <h1>
-      Gabrielle Essence Eau De Parfum
-    </h1>
-    A floral, solar and voluptuous interpretation composed by Olivier Polge,
-    Perfumer-Creator for the House of CHANEL.
+    <div>
+      <p>Preview</p>
+      <h1>
+        Gabrielle Essence Eau De Parfum
+      </h1>
+      A floral, solar and voluptuous interpretation composed by Olivier Polge,
+      Perfumer-Creator for the House of CHANEL.
 
-    <p>$149.99</p>
-    <p>$169.99</p>
-    <p>Add to Cart</p>
+      <p>$149.99</p>
+      <p>$169.99</p>
+      <p>Add to Cart</p>
+    </div>
   </div>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -38,18 +40,6 @@
 </head>
 
 <body>
-
-  Preview
-
-  Gabrielle Essence Eau De Parfum
-
-  A floral, solar and voluptuous interpretation composed by Olivier Polge,
-  Perfumer-Creator for the House of CHANEL.
-
-  $149.99
-  $169.99
-
-  Add to Cart
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
