--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
   <title>Frontend Mentor | Product preview card component</title>
 
   <div class="container">
-    <img src="./images/image-product-desktop.jpg" alt="">
-    <div>
+    <div class="img1">
+      <img src="./images/image-product-desktop.jpg" alt="">
+    </div>
+    <div class="containerleft">
       <p>Preview</p>
       <h1>
         Gabrielle Essence Eau De Parfum
