--- a/index.html
+++ b/index.html
@@ -10,23 +10,7 @@
   <link rel="stylesheet" href="./style.css">
   <title>Frontend Mentor | Product preview card component</title>
 
-  <div class="container">
-    <div class="img1">
-      <img src="./images/image-product-desktop.jpg" alt="">
-    </div>
-    <div class="containerleft">
-      <p>Preview</p>
-      <h1>
-        Gabrielle Essence Eau De Parfum
-      </h1>
-      A floral, solar and voluptuous interpretation composed by Olivier Polge,
-      Perfumer-Creator for the House of CHANEL.
 
-      <p>$149.99</p>
-      <p>$169.99</p>
-      <p>Add to Cart</p>
-    </div>
-  </div>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
@@ -43,9 +27,29 @@
 
 <body>
 
+  <div class="card">
+    <div class="imgcontainer">
+      <img src="./images/image-product-desktop.jpg" alt="img">
+    </div>
+
+    <div class="details-container">
+      <p class="perfume">PERFUME</p>
+      <h1 class="name">Gabrielle Essence Eau De Parfum</h1>
+      <p class="description">
+        A floral, solar and voluptous interpretation composed by Olivier Polge, perfumer-Creator for the house of
+        CHANEL.
+      </p>
+
+      <div class="price-container">
+        <h1 class="current-price">$149.99</h1>
+        <p class="old-price">$169.99</p>
+      </div>
+    </div>
+  </div>
+
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Lucas Da Silva</a>.
   </div>
 </body>
 
