--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
         <h1 class="current-price">$149.99</h1>
         <p class="old-price">$169.99</p>
       </div>
+
+      <button class="btn">
+        <img src="./images/icon-cart.svg" alt="btn">
+        Add to Cart
+      </button>
+
     </div>
   </div>
 
